Revert "Fixed label overflow for older Safari versions"
This reverts commit 8a19de66bdd94ea4806aa6b3180a79fdc870d75b.

--- a/scripts/components/Shared/NavigationButtonLabel.scss
+++ b/scripts/components/Shared/NavigationButtonLabel.scss
@@ -156,7 +156,6 @@ $arrowDownTop: calc(-50% + 1px);
       white-space: pre;
       text-overflow: ellipsis;
       overflow-y: hidden;
-      position: relative;
       text-align: left;
       display: -webkit-box;
       -webkit-line-clamp: 2;
